Keystone Final Debug Stage 4/4